# meta-api-cource

./: README.md  pyproject.toml
LittleLemon/: pyproject.toml
LittleLemon/LittleLemon/: settings.py
LittleLemon/LittleLemonAPI/: serializers.py  thorottles.py  urls.py  views.py
LittleLemon/LittleLemonAPI/migrations/: 0001_initial.py
booklist/BookListAPI/: models.py  urls.py  views.py
booklist/BookListAPI/migrations/: 0001_initial.py
booklist/booklist/: settings.py  urls.py
